<resources>
    <string name="app_name">"My Cloud Printer"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="login_screen_title">Welcome to Fast Print</string>
    <string name="fast_print">My Cloud Printer</string>
    <string name="login_instructions">Enter your name and password to access the system</string>
    <string name="main_screen_files_title">Your Files</string>
    <string name="add_files">ADD FILES</string>
    <string name="log_out">Log Out</string>
    <string name="back">Back</string>
    <string name="help_text">Instructions for using this Machine</string>
    <string name="put_flashdisk">Please, insert your Pendrive and click on "Scan".</string>
    <string name="scan">SCAN</string>
    <string name="authentification_error">(*)The user name or password is incorrect</string>
    <string name="email">Email:</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="cancelar">CANCELAR</string>
    <string name="salvar">SALVAR</string>
    <string name="DownloadingFile">Downloading File..</string>
    <string name="LoadingPage">Loading Page..</string>
    <string name="PleaseWait">Please Wait</string>
    <string name="DownloadBaseUrl"></string>
    <string name="rodolfoHouseAplicationServerAddress">http://177.180.161.140:8080/MyCloudPrinter/Files_Clientes/</string>
    <string name="serverOnlineAplicationServerAddress">http://mycloudprinter.com.br/adm/</string>
    <string name="driveGooglePdfViewrURL">https://drive.google.com/viewerng/viewer?embedded=true&amp;url=</string>
</resources>
