<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.UpdateCliente">

    <TextView
        android:textColor="#FFF"
        android:textStyle="bold"
        android:layout_width="90dp"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_email"
        android:gravity="center_vertical"
        android:text="@string/email"
        />

    <EditText
        android:layout_width="270dp"
        android:background="#FFF"
        android:textColor="#000"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/lbl_email"
        android:id="@+id/txt_email"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:textColor="#FFF"
        android:textStyle="bold"
        android:layout_below="@id/lbl_email"
        android:layout_width="90dp"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_nome"
        android:text="@string/nome"
        />

    <EditText
        android:layout_width="270dp"
        android:background="#FFF"
        android:textColor="#000"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/txt_email"
        android:layout_toEndOf="@id/lbl_nome"
        android:id="@+id/txt_nome"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="#FFF"
        android:textStyle="bold"
        android:layout_below="@id/lbl_nome"
        android:layout_marginBottom="16dp"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_telefone"
        android:text="@string/telefone"
        />

    <EditText
        android:layout_width="270dp"
        android:background="#FFF"
        android:textColor="#000"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/lbl_email"
        android:layout_below="@id/txt_nome"
        android:id="@+id/txt_telefone"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/cancelar"
        android:layout_below="@+id/txt_telefone"
        android:layout_toStartOf="@+id/btn_salvar"
        android:onClick="btnCancelarClicked"/>


    <Button
        android:layout_alignRight="@id/txt_telefone"
        android:id="@+id/btn_salvar"
        android:layout_below="@id/txt_telefone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:onClick="btnSalvarClicked"
        android:text="@string/salvar"/>

</RelativeLayout>
