<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.Login">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:textColor="#000"
        android:text="@string/fast_print"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="500dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/login_shadow_background"
        android:layout_marginTop="30dp"
        android:id="@+id/frameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authentification_error"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="#ff0000"
            android:id="@+id/txt_authentification_error"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:weightSum="9"
            android:layout_gravity="center"
            android:orientation="vertical"
            >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/login"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/txt_email"
                android:text="teste@gmail.com"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/password"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/txt_senha"
                android:text="12345"
                android:inputType="textPassword"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:textColor="#FFF"
                    android:background="@color/colorPrimary"
                    android:text="@string/log_in"
                    android:onClick="btnLogInClicked"
                    android:clickable="true"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_instructions"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
