<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="7"
            android:background="@color/colorPrimary">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:scaleType="fitStart"
                android:src="@drawable/question_mark"
                android:background="@null"
                android:padding="10dp"
                android:onClick="btnHelpClicked"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="0dp" />

            <Button
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/log_out"
                android:textSize="18sp"
                android:textColor="#FFF"
                android:background="@null"
                android:layout_gravity="center_vertical"
                android:onClick="btnLogoutClicked" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/user_info"
                android:layout_weight="2"
                android:layout_marginRight="5dp"
                android:weightSum="4"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitEnd"
                    android:src="@drawable/add_credit"
                    android:layout_margin="20dp"
                    android:background="@null" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="R$ 0,00"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:gravity="center"/>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/user"
                    android:layout_margin="10dp"
                    android:background="@null" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:weightSum="7"
            android:orientation="horizontal"
            android:background="@android:color/darker_gray">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal">


                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:padding="10dp"
                    android:id="@+id/print_fab"
                    android:background="#FFF"
                    android:elevation="8dp"
                    android:src="@drawable/printer"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:background="#FFF"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/img_pdf_file"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#FFF"
                android:padding="10dp"
                android:weightSum="10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/main_screen_files_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:id="@+id/recycler_view_main_files_list">


                </android.support.v7.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    >
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:textColor="#FFF"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:onClick="btnAddMoreFilesClicked"
                        android:text="@string/add_files"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
